--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,25 +18,35 @@ jobs:
       with:
         python-version: '3.x'  # ajuste conforme sua versão de Python
 
-    - name: Install dependencies
+    - name: Upgrade pip
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt  # ajuste conforme seu arquivo de dependências
+
+    - name: Install PyInstaller
+      run: |
+        python -m pip install pyinstaller
+
+    - name: Install dependencies
+      run: |
+        python -m pip install -r requirements.txt  # ajuste conforme seu arquivo de dependências
 
     - name: Build executable
       run: |
-        python -m PyInstaller --onefile --noconsole hostnameidgen.py
+        python -m PyInstaller --onefile --noconsole passwordgen.py
 
     - name: Create versioned folder
       run: |
         mkdir -p programa
         timestamp=$(date +'%Y%m%d_%H%M%S')
-        mv dist/hostnameidgen.exe programa/app_v_${timestamp}.exe
+        mv dist/passwordgen.exe programa/app_v_${timestamp}.exe
 
-    - name: Commit executable
+    - name: Configure Git
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
+
+    - name: Commit executable
+      run: |
         git add programa/app_v_*.exe
         git commit -m "Add executable for version $timestamp"
         git push
