--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest  # ajuste conforme seu ambiente de execução
+    runs-on: ubuntu-latest  # ajuste conforme seu ambiente de execução
 
     steps:
     - name: Checkout repository
@@ -16,11 +16,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'  # ajuste conforme sua versão de Python
-
-    - name: Upgrade pip
-      run: |
-        python -m pip install --upgrade pip
+        python-version: '3.11'  # ajuste conforme sua versão de Python
 
     - name: Install PyInstaller
       run: |
@@ -28,7 +24,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install -r requirements.txt  # ajuste conforme seu arquivo de dependências
+        python -m pip install PyQt5
 
     - name: Build executable
       run: |
@@ -38,7 +34,7 @@ jobs:
       run: |
         mkdir -p programa
         timestamp=$(date +'%Y%m%d_%H%M%S')
-        mv dist/passwordgen.exe programa/app_v_${timestamp}.exe
+        mv dist/passwordgen programa/app_v_${timestamp}
 
     - name: Configure Git
       run: |
@@ -47,6 +43,6 @@ jobs:
 
     - name: Commit executable
       run: |
-        git add programa/app_v_*.exe
+        git add programa/app_v_*
         git commit -m "Add executable for version $timestamp"
         git push
