--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,13 +18,18 @@ jobs:
       with:
         python-version: '3.11'  # ajuste conforme sua versão de Python
 
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libxcb-render-util0 libxkbcommon-x11-0
+
     - name: Install PyInstaller
       run: |
         python -m pip install pyinstaller
 
-    - name: Install dependencies
+    - name: Install PyQt5 and dependencies
       run: |
-        python -m pip install PyQt5
+        python -m pip install pyqt5 pyqt5-tools
 
     - name: Build executable
       run: |
@@ -34,7 +39,7 @@ jobs:
       run: |
         mkdir -p programa
         timestamp=$(date +'%Y%m%d_%H%M%S')
-        mv dist/passwordgen programa/app_v_${timestamp}
+        mv dist/passwordgen programa/app_v_${timestamp}.exe
 
     - name: Configure Git
       run: |
@@ -43,6 +48,6 @@ jobs:
 
     - name: Commit executable
       run: |
-        git add programa/app_v_*
+        git add programa/app_v_*.exe
         git commit -m "Add executable for version $timestamp"
         git push
