--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,11 @@ jobs:
 
     - name: Create versioned folder
       run: |
-        mkdir programa
+        if (Test-Path programa) {
+          Write-Host "Directory 'programa' already exists."
+        } else {
+          New-Item -ItemType Directory -Path programa
+        }
         $timestamp = Get-Date -Format "yyyyMMdd_HHmmss"
         Move-Item dist\passwordgen.exe programa\app_v_${timestamp}.exe
 
