--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,9 +26,14 @@ jobs:
       run: |
         python -m pip install pyqt5 pyqt5-tools
 
+    - name: Download custom icon
+      run: |
+        mkdir icons
+        wget -O icons/icon.png https://github.com/chaos4455/passgen/raw/main/icon.png
+
     - name: Build executable
       run: |
-        pyinstaller --onefile --noconsole passwordgen.py
+        pyinstaller --onefile --noconsole --icon=icons/icon.png passwordgen.py
 
     - name: Check output
       run: |
