--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,11 @@ jobs:
       with:
         python-version: '3.11'  # ajuste conforme sua versão de Python
 
+    - name: Download custom icon
+      run: |
+        mkdir icons
+        Invoke-WebRequest -Uri "https://github.com/chaos4455/passgen/raw/main/icon.png" -OutFile "icons/icon.png"
+
     - name: Install PyInstaller
       run: |
         python -m pip install pyinstaller
@@ -25,11 +30,6 @@ jobs:
     - name: Install PyQt5 and dependencies
       run: |
         python -m pip install pyqt5 pyqt5-tools
-
-    - name: Download custom icon
-      run: |
-        mkdir icons
-        wget -O icons/icon.png https://github.com/chaos4455/passgen/raw/main/icon.png
 
     - name: Build executable
       run: |
